--- a/exercises_0/templates/head.tex
+++ b/exercises_0/templates/head.tex
@@ -9,18 +9,14 @@
 \definecolor{augustablue}{HTML}{002f55}
 \definecolor{augustagrey}{HTML}{A5ACAF}
 % Colored links, with underline, cf. https://tex.stackexchange.com/questions/26071/how-can-i-have-colored-and-underlined-links-with-hyperref
-\hypersetup{colorlinks=true,
-            allcolors=augustablue,
-            linkbordercolor=augustagrey,
-            }
 
-\makeatletter
-\Hy@AtBeginDocument{%
-  \def\@pdfborder{0 0 0}% Overrides border definition set with colorlinks=true
-  \def\@pdfborderstyle{/S/U/W 1}% Overrides border style set with colorlinks=true
-                                % Hyperlink border style will be underline of width 1pt
+\AtEndPreamble{
+    \hypersetup{colorlinks=true,
+        allcolors=augustablue,
+        linkbordercolor=augustagrey,
+        }
 }
-\makeatother
+
 
 \makeatletter
 \renewenvironment{description}%
