--- a/exercises_2/solution/templates/head.tex
+++ b/exercises_2/solution/templates/head.tex
@@ -9,18 +9,14 @@
 \definecolor{augustablue}{HTML}{002f55}
 \definecolor{augustagrey}{HTML}{A5ACAF}
 % Colored links, with underline, cf. https://tex.stackexchange.com/questions/26071/how-can-i-have-colored-and-underlined-links-with-hyperref
-\hypersetup{colorlinks=true,
-            allcolors=augustablue,
-            linkbordercolor=augustagrey,
-            }
 
-\makeatletter
-\Hy@AtBeginDocument{%
-  \def\@pdfborder{0 0 0}% Overrides border definition set with colorlinks=true
-  \def\@pdfborderstyle{/S/U/W 1}% Overrides border style set with colorlinks=true
-                                % Hyperlink border style will be underline of width 1pt
+\AtEndPreamble{
+    \hypersetup{colorlinks=true,
+        allcolors=augustablue,
+        linkbordercolor=augustagrey,
+        }
 }
-\makeatother
+
 
 \makeatletter
 \renewenvironment{description}%
@@ -29,3 +25,35 @@
                         \let\makelabel\descriptionlabel}}%
                {\endlist}
 \makeatother
+
+\usepackage[verbose]{newunicodechar}
+
+\newfontfamily\sym{Symbola}
+\DeclareTextFontCommand{\symb}{\sym}
+
+\newunicodechar{🔒}{\symb 🔒} % U+1F512, "LOCK"
+\newunicodechar{✘}{\symb ✘} % U+2718, "HEAVY BALLOT X"
+\newunicodechar{⚠}{\symb ⚠} % U+26A0, "WARNING SIGN"
+\newunicodechar{❓}{\symb ❓} % U+2753, "BLACK QUESTION MARK ORNAMENT"
+\newunicodechar{🔜}{\symb 🔜} % U+1F51C, "SOON WITH RIGHTWARDS ARROW ABOVE"
+\newunicodechar{ℕ}{\symb ℕ} % U+2115, "DOUBLE-STRUCK CAPITAL N"
+\newunicodechar{ℤ}{\symb ℤ} % U+2124, "DOUBLE-STRUCK CAPITAL Z"
+\newunicodechar{✔}{\symb ✔} % U+2714, "HEAVY CHECK MARK"
+\newunicodechar{↵}{\symb ↵} % U+21B5, "DOWNWARDS ARROW WITH CORNER LEFTWARDS"
+\newunicodechar{↩}{\symb ↵} % We use the same symbol as before
+                            % for "Right Arrow Curving Left Emoji"
+\newunicodechar{⏎}{\symb ↵} % We use the same symbol as before
+\newunicodechar{🛡}{\symb 🛡} % U+1F6E1, "SHIELD"
+\newunicodechar{ℝ}{\symb ℝ} % U+211D, "Double-Struck Capital R"
+\newunicodechar{⌘}{\symb ⌘} % U+2318, "PLACE OF INTEREST SIGN"
+\newunicodechar{⇧}{\symb ⇧} % U+21E7 "UPWARDS WHITE ARROW"
+\newunicodechar{⌥}{\symb ⌥} % U+2325 "OPTION KEY"
+\newunicodechar{├}{\symb ├} 
+\newunicodechar{│}{\symb │}
+\newunicodechar{└}{\symb └} % U+2514
+\newunicodechar{─}{\symb ─} % U+2500
+
+% To add line wrap for code environment
+% https://github.com/jgm/pandoc/issues/4302#issuecomment-360669013
+\usepackage{fvextra}
+\DefineVerbatimEnvironment{Highlighting}{Verbatim}{breaklines,commandchars=\\\{\}}
