Started writing some research directions.

--- a/templates/bib/bib.bib
+++ b/templates/bib/bib.bib
@@ -4,11 +4,50 @@
   url =           {https://github.com/hwayne/lets-prove-leftpad},
 }
 
+@misc{enwiki:1215270849,
+  author =        {{Wikipedia contributors}},
+  note =          {[Online; accessed 3-May-2024]},
+  title =         {Rice's theorem --- {Wikipedia}{,} The Free
+                   Encyclopedia},
+  year =          {2024},
+  url =           {https://en.wikipedia.org/w/index.php?title=Rice%27s_theorem&
+                  oldid=1215270849},
+}
+
 @misc{mathcomp,
   author =        {Mathematical Components team},
   title =         {Mathematical Components},
   year =          {2022},
   url =           {https://math-comp.github.io},
+}
+
+@misc{stat-slides,
+  author =        {Torlak, Emina},
+  title =         {Static Analysis},
+  url =           {https://courses.cs.washington.edu/courses/cse403/15sp/
+                  lectures/L19.pdf},
+}
+
+@misc{astree,
+  author =        {Cousot, Patrick and Cousot, Radhia and
+                   Feret, Jérôme and Miné, Antoine and Rival, Xavier},
+  title =         {The Astrée Static Analyzer},
+  url =           {https://www.astree.ens.fr/},
+}
+
+@misc{glab-rice,
+  author =        {van Glabbeek, Robert J.},
+  title =         {CS 154 Class Handouts - Rice's theorem.},
+  url =           {http://kilby.stanford.edu/~rvg/154/handouts/Rice.html},
+}
+
+@misc{trevisan-rice,
+  author =        {Trevisan, Luca and Williams, Ryan},
+  title =         {CS154: Automata and Complexity - Notes on Rice’s
+                   Theorem},
+  year =          {2012},
+  url =           {https://theory.stanford.edu/~trevisan/cs154-12/
+                  noterice.pdf},
 }
 
 @misc{llvmLoop,
@@ -313,15 +352,6 @@
                   },
 }
 
-@misc{Hocore,
-  author =        {Alan Schmitt and Martín Escarrá and
-                   Petar Maksimović},
-  title =         {HOcore in Coq},
-  year =          {2015},
-  url =           {https://people.rennes.inria.fr/Alan.Schmitt/research/hocore/
-                  },
-}
-
 @misc{Jool,
   title =         {Reversible Object-Oriented Language: Janus
                    Object-Oriented Language = JOOL = Joule},
@@ -578,11 +608,18 @@
   author =        {Aubert, Clément and Rubiano, Thomas and Rusch, Neea and
                    Seiller, Thomas},
   booktitle =     {Verification, Model Checking, and Abstract
-                   Interpretation (VMCAI 2023)},
-  note =          {Draft},
+                   Interpretation - 24th International Conference,
+                   {VMCAI} 2023, Boston, MA, USA, January 16-17, 2023,
+                   Proceedings},
+  editor =        {Cezara Dragoi and Michael Emmi and Jingbo Wang},
+  pages =         {1--24},
+  publisher =     {Springer},
+  series =        {Lecture Notes in Computer Science},
   title =         {Distributing and Parallelizing Non-canonical Loops},
+  volume =        {13881},
   year =          {2023},
-  url =           {https://hal.science/hal-03669387v1},
+  doi =           {10.1007/978-3-031-24950-1_1},
+  isbn =          {978-3-031-24949-5},
 }
 
 @unpublished{Aubert2023b,
@@ -593,17 +630,18 @@
   2023}},
   title =         {Certifying Complexity Analysis},
   year =          {2023},
-  url =           {https://hal.science/hal-04083105v1},
 }
 
-@unpublished{Aubert2022m,
+@unpublished{Aubert2022g,
   author =        {Aubert, Clément and Rubiano, Thomas and Rusch, Neea and
                    Seiller, Thomas},
-  type =          {Communication at
-                   \href{https://types22.inria.fr/}{TYPES 2022}},
-  title =         {Realizing Implicit Computational Complexity},
+  month =         mar,
+  note =          {presented at the
+                   \href{https://types22.inria.fr/}{28th International
+                   Conference on Types for Proofs and Programs}
+                   (\href{https://youtu.be/L68Gs5ak0z4}{Recording})},
+  title =         {{Realizing Implicit Computational Complexity}},
   year =          {2022},
-  url =           {https://hal.science/hal-03603510v1},
 }
 
 @unpublished{Aubert2023ccsk,
@@ -622,7 +660,6 @@
   title =         {Causal Consistent Replication in Reversible
                    Concurrent Calculi},
   year =          {2021},
-  url =           {https://hal.science/hal-03384482},
 }
 
 @unpublished{aubert2023c,
@@ -632,7 +669,6 @@
   title =         {{The Correctness of Concurrencies in (Reversible)
                    Concurrent Calculi}},
   year =          {2023},
-  url =           {https://hal.science/hal-03950347},
 }
 
 @inproceedings{aubert2023d,
@@ -641,11 +677,12 @@
                    Reversible Computation, {RC} 2023, Giessen, Germany,
                    July 18-19, Proceedings},
   editor =        {Kutrib, Martin and Meyer, Uwe},
-  note =          {To appear},
+  pages =         {15--23},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
   title =         {Replications in Reversible Concurrent Calculi},
   year =          {2023},
+  doi =           {10.1007/978-3-031-38100-3\_2},
 }
 
 @inproceedings{aubert2023e,
@@ -654,12 +691,10 @@
                    Reversible Computation, {RC} 2023, Giessen, Germany,
                    July 18-19, Proceedings},
   editor =        {Kutrib, Martin and Meyer, Uwe},
-  note =          {To appear},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
   title =         {Implementation of Reversible Distributed Calculus},
   year =          {2023},
-  url =           {https://hal.science/hal-04035458v1},
 }
 
 @inproceedings{aubert2022c,
@@ -684,7 +719,6 @@
   note =          {Technical Report},
   title =         {{Concurrencies in Reversible Concurrent Calculi}},
   year =          {2022},
-  url =           {https://hal.science/hal-03605003},
 }
 
 @inproceedings{Aubert2022b,
@@ -713,7 +747,6 @@
   title =         {mwp-Analysis Improvement and Implementation:
                    Realizing Implicit Computational Complexity},
   year =          {2022},
-  url =           {https://hal.science/hal-03596285},
 }
 
 @inproceedings{Aubert2022l,
@@ -732,20 +765,6 @@
   year =          {2023},
   doi =           {10.1007/978-3-031-45332-8_14},
   isbn =          {978-3-031-45331-1},
-  url =           {https://hal.science/hal-03269121v4},
-}
-
-@unpublished{Aubert2022g,
-  author =        {Aubert, Clément and Rubiano, Thomas and Rusch, Neea and
-                   Seiller, Thomas},
-  month =         mar,
-  note =          {presented at the
-                   \href{https://types22.inria.fr/}{28th International
-                   Conference on Types for Proofs and Programs}
-                   (\href{https://youtu.be/L68Gs5ak0z4}{Recording})},
-  title =         {{Realizing Implicit Computational Complexity}},
-  year =          {2022},
-  url =           {https://hal.science/hal-03603510},
 }
 
 @unpublished{Aubert2021e,
@@ -755,7 +774,6 @@
   note =          {working paper},
   title =         {An extended and more practical mwp flow analysis},
   year =          {2021},
-  url =           {https://hal.science/hal-03269096},
 }
 
 @unpublished{Aubert2021f,
@@ -766,7 +784,6 @@
   title =         {An implementation of flow calculus for complexity
                    analysis (tool paper)},
   year =          {2021},
-  url =           {https://hal.science/hal-03269121},
 }
 
 @inproceedings{Aubert2016fossacs,
@@ -795,7 +812,6 @@
   title =         {{Process, Systems and Tests: Three Layers in
                    Concurrent Computation (Short Paper)}},
   year =          {2020},
-  url =           {https://hal.science/hal-02899123},
 }
 
 @inproceedings{Aubert2021h,
@@ -828,6 +844,15 @@
   issn =          {2352-2208},
 }
 
+@inproceedings{Aubert2024,
+  author =        {Aubert, Clément and Phillips, Iain C.\ C. and
+                   Ulidowski, Irek},
+  note =          {Submitted to LICS 2024},
+  title =         {Syntactic Approaches to True Concurrency Semantics in
+                   Reversible Process Calculi},
+  year =          {2024},
+}
+
 @unpublished{Aubert2021c,
   author =        {Aubert, Clément and Medić, Doriana},
   month =         may,
@@ -835,7 +860,6 @@
   title =         {Enabling Replications and Contexts in Reversible
                    Concurrent Calculus},
   year =          {2021},
-  url =           {https://hal.science/hal-03183053},
 }
 
 @inproceedings{Aubert2021d,
@@ -862,7 +886,6 @@
   title =         {{Quelle est la notion correcte de congruence
                    structurelle pour une alg{\`e}bre de processus?}},
   year =          {2020},
-  url =           {https://hal.science/hal-02981196},
 }
 
 @techreport{Aubert2020d,
@@ -894,7 +917,6 @@
                    The Example of Hereditary History-Preserving
                    Bisimulation (Rapport de recherche)},
   year =          {2020},
-  url =           {https://hal.science/hal-02568250},
 }
 
 @inproceedings{Aubert2020b,
@@ -1086,6 +1108,119 @@
   year =          {2016},
   doi =           {10.1016/j.ic.2014.01.018},
   issn =          {0890-5401},
+}
+
+@inproceedings{Hoffmann2012c,
+  author =        {Hoffmann, Jan and Klaus Aehlig and Martin Hofmann},
+  booktitle =     {Computer Aided Verification - 24th International
+                   Conference, {CAV} 2012},
+  editor =        {P. Madhusudan and Sanjit A. Seshia},
+  pages =         {781--786},
+  publisher =     {Springer},
+  series =        {LNCS},
+  title =         {Resource Aware {ML}},
+  volume =        {7358},
+  year =          {2012},
+  doi =           {10.1007/978-3-642-31424-7_64},
+  isbn =          {978-3-642-31423-0},
+}
+
+@inproceedings{flores2014,
+  author =        {Flores-Montoya, Antonio and H{\"a}hnle, Reiner},
+  booktitle =     {Programming Languages and Systems (APLAS 2014)},
+  pages =         {275--295},
+  publisher =     {Springer International Publishing},
+  title =         {Resource analysis of complex programs with cost
+                   equations},
+  year =          {2014},
+  doi =           {10.1007/978-3-319-12736-1_15},
+}
+
+@article{brockschmidt2016,
+  author =        {Brockschmidt, Marc and Emmes, Fabian and
+                   Falke, Stephan and Fuhs, Carsten and
+                   Giesl, J{\"u}rgen},
+  journal =       {ACM Transactions on Programming Languages and Systems
+                   (TOPLAS)},
+  number =        {4},
+  pages =         {1--50},
+  publisher =     {ACM},
+  title =         {Analyzing runtime and size complexity of integer
+                   programs},
+  volume =        {38},
+  year =          {2016},
+  doi =           {10.1145/2866575},
+}
+
+@inproceedings{moser2018,
+  author =        {Moser, Georg and Schneckenreither, Manuel},
+  booktitle =     {Functional and Logic Programming (FLOPS 2018)},
+  pages =         {214--229},
+  publisher =     {Springer International Publishing},
+  title =         {Automated amortised resource analysis for term
+                   rewrite systems},
+  year =          {2018},
+  doi =           {10.1007/978-3-319-90686-7_14},
+}
+
+@misc{yingfei_2014a,
+  author =        {Yingfei, Xiong},
+  journal =       {A quick tour of OCaml},
+  publisher =     {Peking University},
+  title =         {Chapter 19: Case study: Featherweight java - github
+                   pages},
+  year =          {2014},
+  url =           {https://xiongyingfei.github.io/DPPL/2014/zhao_ch19.pdf},
+}
+
+@article{sinn2017,
+  author =        {Sinn, Moritz and Zuleger, Florian and Veith, Helmut},
+  journal =       {Journal of automated reasoning},
+  pages =         {3--45},
+  publisher =     {Springer},
+  title =         {Complexity and resource bound analysis of imperative
+                   programs using difference constraints},
+  volume =        {59},
+  year =          {2017},
+  doi =           {10.1007/s10817-016-9402-4},
+}
+
+@inproceedings{alias2010,
+  author =        {Alias, Christophe and Darte, Alain and
+                   Feautrier, Paul and Gonnord, Laure},
+  booktitle =     {Static Analysis: 17th International Symposium, SAS
+                   2010, Perpignan, France, September 14-16, 2010.
+                   Proceedings 17},
+  pages =         {117--133},
+  publisher =     {Springer International Publishing},
+  title =         {Multi-dimensional rankings, program termination, and
+                   complexity bounds of flowchart programs},
+  year =          {2010},
+  doi =           {10.1007/978-3-642-15769-1_8},
+}
+
+@article{albert2012,
+  author =        {Albert, Elvira and Arenas, Puri and Genaim, Samir and
+                   Puebla, German and Zanardini, Damiano},
+  journal =       {Theoretical Computer Science},
+  number =        {1},
+  pages =         {142--159},
+  publisher =     {Elsevier},
+  title =         {Cost analysis of object-oriented bytecode programs},
+  volume =        {413},
+  year =          {2012},
+  doi =           {10.1016/j.tcs.2011.07.009},
+}
+
+@phdthesis{flores2017,
+  address =       {Darmstadt},
+  author =        {Flores Montoya, Antonio},
+  month =         {August},
+  school =        {Technische Universit{\"a}t},
+  title =         {Cost Analysis of Programs Based on the Refinement of
+                   Cost Relations},
+  year =          {2017},
+  url =           {http://tuprints.ulb.tu-darmstadt.de/6746/},
 }
 
 @inproceedings{Grellois2015,
@@ -1638,6 +1773,50 @@
   url =           {https://doi.org/10.1109/FOSE.2007.27},
 }
 
+@article{ding2023,
+  address =       {New York, NY, USA},
+  author =        {Ding, Shuo and Zhang, Qirun},
+  journal =       {Proc. ACM Program. Lang.},
+  month =         {jan},
+  number =        {POPL},
+  publisher =     {Association for Computing Machinery},
+  title =         {Witnessability of Undecidable Problems},
+  volume =        {7},
+  year =          {2023},
+  doi =           {10.1145/3571227},
+  url =           {https://doi.org/10.1145/3571227},
+}
+
+@article{moller2023,
+  author =        {M{\o}ller, Anders and Schwartzbach, Michael I},
+  journal =       {Department of Computer Science, Aarhus University},
+  month =         {May},
+  title =         {Static Program Analysis},
+  year =          {2023},
+  url =           {https://cs.au.dk/~amoeller/spa/},
+}
+
+@article{rice1953,
+  author =        {Rice, Henry Gordon},
+  journal =       {Transactions of the American Mathematical society},
+  number =        {2},
+  pages =         {358--366},
+  title =         {Classes of recursively enumerable sets and their
+                   decision problems},
+  volume =        {74},
+  year =          {1953},
+  doi =           {10.1090/S0002-9947-1953-0053041-6},
+}
+
+@book{nielson2010,
+  author =        {Nielson, Flemming and Nielson, Hanne R and
+                   Hankin, Chris},
+  publisher =     {Springer},
+  title =         {Principles of program analysis},
+  year =          {2010},
+  isbn =          {9783642084744},
+}
+
 @article{abs-1712-00676,
   author =        {Jay Jay Billings and Alexander J. McCaskey and
                    Geoffroy Vallée and Gregory R. Watson},
@@ -2116,7 +2295,7 @@
 }
 
 @inproceedings{Lanese2021,
-  author =        {Lanese, Ivan and Iain Phillips},
+  author =        {Lanese, Ivan and Phillips, Iain C.\ C.},
   booktitle =     {Reversible Computation - 13th International
                    Conference, {RC} 2021, Virtual Event, July 7-8, 2021,
                    Proceedings},
@@ -2170,9 +2349,25 @@
   isbn =          {978-3-642-37035-9},
 }
 
+@inproceedings{Biernacka2022,
+  author =        {Malgorzata Biernacka and Dariusz Biernacki and
+                   Sergue{\"{\i}} Lenglet and Alan Schmitt},
+  booktitle =     {33rd International Conference on Concurrency Theory,
+                   {CONCUR} 2022, September 12-16, 2022, Warsaw, Poland},
+  editor =        {Bartek Klin and Slawomir Lasota and Anca Muscholl},
+  pages =         {7:1--7:24},
+  publisher =     {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r
+                   Informatik},
+  series =        {LIPIcs},
+  title =         {Non-Deterministic Abstract Machines},
+  volume =        {243},
+  year =          {2022},
+  doi =           {10.4230/LIPICS.CONCUR.2022.7},
+}
+
 @inproceedings{Lanese2020,
-  author =        {Lanese, Ivan and Iain C. C. Phillips and
-                   Irek Ulidowski},
+  author =        {Lanese, Ivan and Phillips, Iain C.\ C. and
+                   Ulidowski, Irek},
   booktitle =     {Foundations of Software Science and Computation
                    Structures - 23rd International Conference, {FOSSACS}
                    2020, Held as Part of the European Joint Conferences
@@ -2411,7 +2606,7 @@
 
 @inproceedings{Hainry2021,
   author =        {Emmanuel Hainry and Emmanuel Jeandel and
-                   Romain Péchoux and Olivier Zeyen},
+                   Péchoux, Romain and Olivier Zeyen},
   booktitle =     {Theoretical Aspects of Computing - {ICTAC} 2021 -
                    18th International Colloquium, Virtual Event,
                    Nur-Sultan, Kazakhstan, September 8-10, 2021,
@@ -2426,6 +2621,17 @@
   year =          {2021},
   doi =           {10.1007/978-3-030-85315-0_20},
   isbn =          {978-3-030-85314-3},
+}
+
+@article{Hainry2023,
+  author =        {Emmanuel Hainry and Péchoux, Romain},
+  journal =       {Proceedings of the ACM on Programming Languages},
+  number =        {{POPL}},
+  pages =         {806--832},
+  title =         {A General Noninterference Policy for Polynomial Time},
+  volume =        {7},
+  year =          {2023},
+  doi =           {10.1145/3571221},
 }
 
 @article{Marion2009b,
@@ -3009,7 +3215,7 @@
 
 @article{Kaarsgaard2017,
   author =        {Robin Kaarsgaard and Holger Bock Axelsen and
-                   Robert Glück},
+                   Gl{\"{u}}ck, Robert},
   journal =       {Journal of Logical and Algebraic Methods in
                    Programming},
   pages =         {33--50},
@@ -3031,8 +3237,19 @@
   doi =           {10.1587/transinf.2016EDP7274},
 }
 
+@article{Gluck2023,
+  author =        {Gl{\"{u}}ck, Robert and Yokoyama, Tetsuo},
+  journal =       {Theoretical Computer Science},
+  pages =         {113429},
+  title =         {Reversible computing from a programming language
+                   perspective},
+  volume =        {953},
+  year =          {2023},
+  doi =           {10.1016/J.TCS.2022.06.010},
+}
+
 @inproceedings{Yokoyama2007,
-  author =        {Tetsuo Yokoyama and Robert Gl{\"{u}}ck},
+  author =        {Yokoyama, Tetsuo and Gl{\"{u}}ck, Robert},
   booktitle =     {Proceedings of the 2007 {ACM} {SIGPLAN} Workshop on
                    Partial Evaluation and Semantics-based Program
                    Manipulation, 2007, Nice, France, January 15-16,
@@ -3271,7 +3488,7 @@
   pages =         {75--92},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
-  title =         {Reversible Choreographies via Monitoring in Erlang},
+  title =         {Reversible Choreographies via Monitoring in {E}rlang},
   volume =        {10853},
   year =          {2018},
   doi =           {10.1007/978-3-319-93767-0_6},
@@ -3343,9 +3560,9 @@
 
 @incollection{Kuhn2020,
   author =        {Stefan Kuhn and Bogdan Aman and Gabriel Ciobanu and
-                   Anna Philippou and Kyriaki Psara and Irek Ulidowski},
-  editor =        {Irek Ulidowski and Ivan Lanese and Ulrik Pagh Schultz and
-                   Carla Ferreira},
+                   Anna Philippou and Kyriaki Psara and Ulidowski, Irek},
+  editor =        {Ulidowski, Irek and Ivan Lanese and
+                   Ulrik Pagh Schultz and Carla Ferreira},
   pages =         {151--176},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
@@ -3397,7 +3614,7 @@
 
 @article{Medic2020,
   author =        {Medić, Doriana and Mezzina, Claudio Antares and
-                   Iain Phillips and Nobuko Yoshida},
+                   Phillips, Iain C.\ C. and Nobuko Yoshida},
   journal =       {Information and Computation},
   pages =         {104644},
   title =         {A parametric framework for reversible
@@ -4069,6 +4286,16 @@
                    programmation}},
   year =          {2016},
   url =           {https://hal.science/tel-01400666},
+}
+
+@phdthesis{Pechoux2020,
+  author =        {Péchoux, Romain},
+  month =         oct,
+  school =        {{Universit{\'e} de Lorraine}},
+  type =          {Habilitation à diriger des recherches},
+  title =         {{Complexit{\'e} implicite : bilan et perspectives}},
+  year =          {2020},
+  url =           {https://hal.univ-lorraine.fr/tel-02978986},
 }
 
 @phdthesis{Baelde2021,
@@ -5553,7 +5780,7 @@
   booktitle =     {Reversible Computation - 9th International
                    Conference, {RC} 2017, Kolkata, India, July 6-7,
                    2017, Proceedings},
-  editor =        {Iain Phillips and Hafizur Rahaman},
+  editor =        {Phillips, Iain C.\ C. and Hafizur Rahaman},
   pages =         {35--51},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
@@ -5569,7 +5796,7 @@
   booktitle =     {Reversible Computation - 10th International
                    Conference, {RC} 2018, Leicester, UK, September
                    12-14, 2018, Proceedings},
-  editor =        {Jarkko Kari and Irek Ulidowski},
+  editor =        {Jarkko Kari and Ulidowski, Irek},
   pages =         {84--101},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
@@ -5602,7 +5829,7 @@
   booktitle =     {Reversible Computation - 10th International
                    Conference, {RC} 2018, Leicester, UK, September
                    12-14, 2018, Proceedings},
-  editor =        {Jarkko Kari and Irek Ulidowski},
+  editor =        {Jarkko Kari and Ulidowski, Irek},
   pages =         {322--328},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
@@ -6896,7 +7123,7 @@
   author =        {Beffara, Emmanuel and Mogbil, Virgile},
   institution =   {IML - LIPN},
   month =         {02},
-  number =        {hal-00462484},
+  number =        {00462484},
   title =         {Concurrent processes as wireless proof nets},
   year =          {2010},
   url =           {http://hal.archives-ouvertes.fr/hal-00462484/},
@@ -6957,6 +7184,15 @@
   year =          {2015},
   doi =           {10.1007/978-3-319-22102-1_19},
   isbn =          {978-3-319-22101-4},
+}
+
+@misc{Hocore,
+  author =        {Alan Schmitt and Martín Escarrá and
+                   Petar Maksimović},
+  title =         {HOcore in Coq},
+  year =          {2015},
+  url =           {https://people.rennes.inria.fr/Alan.Schmitt/research/hocore/
+                  },
 }
 
 @inproceedings{Wojciechowski2011,
@@ -9355,7 +9591,7 @@
   booktitle =     {Reversible Computation - 10th International
                    Conference, {RC} 2018, Leicester, UK, September
                    12-14, 2018, Proceedings},
-  editor =        {Jarkko Kari and Irek Ulidowski},
+  editor =        {Jarkko Kari and Ulidowski, Irek},
   pages =         {34--46},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
@@ -9379,8 +9615,8 @@
 @incollection{Schordan2020,
   author =        {Markus Schordan and Tomas Oppelstrup and
                    Michael Kirkedal Thomsen and Robert Gl{\"{u}}ck},
-  editor =        {Irek Ulidowski and Ivan Lanese and Ulrik Pagh Schultz and
-                   Carla Ferreira},
+  editor =        {Ulidowski, Irek and Ivan Lanese and
+                   Ulrik Pagh Schultz and Carla Ferreira},
   pages =         {187--207},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
@@ -10314,7 +10550,7 @@
   booktitle =     {Reversible Computation - 9th International
                    Conference, {RC} 2017, Kolkata, India, July 6-7,
                    2017, Proceedings},
-  editor =        {Phillips, Iain and Rahaman,Hafizur},
+  editor =        {Phillips, Iain C.\ C. and Rahaman, Hafizur},
   pages =         {19--34},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
@@ -10856,6 +11092,18 @@
   volume =        {33},
   year =          {2004},
   doi =           {10.1137/S0097539703432165},
+}
+
+@inproceedings{Slot1984,
+  author =        {Cees F. Slot and van Emde Boas, Peter},
+  editor =        {Richard A. DeMillo},
+  pages =         {391--400},
+  publisher =     {Association for Computing Machinery},
+  title =         {On Tape Versus Core; An Application of Space
+                   Efficient Perfect Hash Functions to the Invariance of
+                   Space},
+  year =          {1984},
+  doi =           {10.1145/800057.808705},
 }
 
 @article{Boas1989,
@@ -12486,7 +12734,7 @@
 }
 
 @inproceedings{Graversen2018,
-  author =        {Graversen, Eva and Phillips, Iain and
+  author =        {Graversen, Eva and Phillips, Iain C.\ C. and
                    Yoshida, Nobuko},
   booktitle =     {Reversible Computation - 10th International
                    Conference, {RC} 2018, Leicester, UK, September
@@ -12503,7 +12751,7 @@
 }
 
 @article{Graversen2021,
-  author =        {Graversen, Eva and Phillips, Iain C. C. and
+  author =        {Graversen, Eva and Phillips, Iain C.\ C. and
                    Yoshida, Nobuko},
   journal =       {Journal of Logical and Algebraic Methods in
                    Programming},
@@ -12516,7 +12764,8 @@
 }
 
 @article{Graversen2022,
-  author =        {Eva Graversen and Iain Phillips and Nobuko Yoshida},
+  author =        {Eva Graversen and Phillips, Iain C.\ C. and
+                   Nobuko Yoshida},
   journal =       {Journal of Logical and Algebraic Methods in
                    Programming},
   pages =         {100720},
@@ -12528,7 +12777,8 @@
 }
 
 @inproceedings{Phillips2012b,
-  author =        {Phillips, Iain and Ulidowski, Irek and Shoji Yuen},
+  author =        {Phillips, Iain C.\ C. and Ulidowski, Irek and
+                   Shoji Yuen},
   booktitle =     {Reversible Computation, 4th International Workshop,
                    {RC} 2012, Copenhagen, Denmark, July 2-3, 2012.
                    Revised Papers},
@@ -13221,8 +13471,8 @@
 }
 
 @article{Song2000b,
-  author =        {Litong Song and Yoshihiko Futamura and Robert Glück and
-                   Zhenjiang Hu},
+  author =        {Litong Song and Yoshihiko Futamura and
+                   Gl{\"{u}}ck, Robert and Zhenjiang Hu},
   journal =       {IEICE Transactions on Information and Systems},
   month =         {10},
   pages =         {1841--1850},
@@ -13235,8 +13485,8 @@
 }
 
 @inproceedings{Song2000a,
-  author =        {Litong Song and Yoshihiko Futamura and Robert Glück and
-                   Zhenjiang Hu},
+  author =        {Litong Song and Yoshihiko Futamura and
+                   Gl{\"{u}}ck, Robert and Zhenjiang Hu},
   booktitle =     {The 2000 International Conference on Software: Theory
                    and Practice (IFIP World Computer Congress 2000)},
   month =         {08},
@@ -13346,6 +13596,16 @@
   volume =        {183},
   year =          {2003},
   doi =           {10.1016/S0890-5401(03)00011-7},
+}
+
+@inproceedings{Marion2011,
+  author =        {Marion, Jean-Yves},
+  pages =         {123--132},
+  publisher =     {IEEE Computer Society},
+  title =         {A Type System for Complexity Flow Analysis},
+  year =          {2011},
+  doi =           {10.1109/LICS.2011.41},
+  isbn =          {978-0-7695-4412-0},
 }
 
 @article{Marion2014,
@@ -14312,7 +14572,7 @@
 }
 
 @article{Phillips2007,
-  author =        {Phillips, Iain and Ulidowski, Irek},
+  author =        {Phillips, Iain C.\ C. and Ulidowski, Irek},
   journal =       {Electronic Notes in Theoretical Computer Science},
   number =        {1},
   pages =         {93--108},
@@ -14323,7 +14583,7 @@
 }
 
 @article{Phillips2014,
-  author =        {Phillips, Iain and Ulidowski, Irek},
+  author =        {Phillips, Iain C.\ C. and Ulidowski, Irek},
   journal =       {Mathematical Structures in Computer Science},
   number =        {2},
   title =         {Event Identifier Logic},
@@ -14333,7 +14593,7 @@
 }
 
 @inproceedings{Phillips2006,
-  author =        {Phillips, Iain and Ulidowski, Irek},
+  author =        {Phillips, Iain C.\ C. and Ulidowski, Irek},
   booktitle =     {Foundations of Software Science and Computation
                    Structures, 9th International Conference, {FOSSACS}
                    2006, Held as Part of the Joint European Conferences
@@ -14351,7 +14611,7 @@
 }
 
 @article{Phillips2007b,
-  author =        {Phillips, Iain and Ulidowski, Irek},
+  author =        {Phillips, Iain C.\ C. and Ulidowski, Irek},
   journal =       {The Journal of Logic and Algebraic Programming},
   number =        {1-2},
   pages =         {70--96},
@@ -14379,7 +14639,8 @@
 }
 
 @inproceedings{Ulidowski2014,
-  author =        {Ulidowski, Irek and Phillips, Iain and Yuen, Shoji},
+  author =        {Ulidowski, Irek and Phillips, Iain C.\ C. and
+                   Yuen, Shoji},
   booktitle =     {Reversible Computation - 6th International
                    Conference, {RC} 2014, Kyoto, Japan, July 10-11,
                    2014. Proceedings},
@@ -15254,7 +15515,7 @@
 }
 
 @inproceedings{Phillips2011,
-  author =        {Phillips, Iain and Ulidowski, Irek},
+  author =        {Phillips, Iain C.\ C. and Ulidowski, Irek},
   booktitle =     {Proceedings 18th International Workshop on
                    Expressiveness in Concurrency, {EXPRESS} 2011,
                    Aachen, Germany, 5th September 2011},
@@ -15270,7 +15531,7 @@
 }
 
 @article{Phillips2012,
-  author =        {Phillips, Iain and Ulidowski, Irek},
+  author =        {Phillips, Iain C.\ C. and Ulidowski, Irek},
   journal =       {Mathematical Structures in Computer Science},
   number =        {2},
   pages =         {333--372},
@@ -15282,7 +15543,7 @@
 }
 
 @inproceedings{Phillips2013,
-  author =        {Phillips, Iain and Ulidowski, Irek},
+  author =        {Phillips, Iain C.\ C. and Ulidowski, Irek},
   booktitle =     {CONCUR 2013 - Concurrency Theory - 24th International
                    Conference, CONCUR 2013, Buenos Aires, Argentina,
                    August 27-30, 2013. Proceedings},
@@ -16796,6 +17057,15 @@
   isbn =          {978-0-7695-4114-3},
 }
 
+@proceedings{lics2011,
+  publisher =     {IEEE Computer Society},
+  title =         {Proceedings of the 26th Annual {IEEE} Symposium on
+                   Logic in Computer Science, {LICS} 2011, June 21-24,
+                   2011, Toronto, Ontario, Canada},
+  year =          {2011},
+  isbn =          {978-0-7695-4412-0},
+}
+
 @proceedings{lics2013,
   booktitle =     {LICS},
   publisher =     {IEEE Computer Society},
@@ -16880,6 +17150,15 @@
                    California, {USA}},
   year =          {1982},
   isbn =          {0-89791-070-2},
+}
+
+@proceedings{STOC1984,
+  editor =        {Richard A. DeMillo},
+  publisher =     {Association for Computing Machinery},
+  title =         {Proceedings of the 16th Annual {ACM} Symposium on
+                   Theory of Computing, April 30 - May 2, 1984,
+                   Washington, DC, {USA}},
+  year =          {1984},
 }
 
 @proceedings{STOC1987,
@@ -18685,7 +18964,7 @@
   booktitle =     {Reversible Computation - 9th International
                    Conference, {RC} 2017, Kolkata, India, July 6-7,
                    2017, Proceedings},
-  editor =        {Iain Phillips and Hafizur Rahaman},
+  editor =        {Phillips, Iain C.\ C. and Hafizur Rahaman},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
   volume =        {10301},
@@ -18698,7 +18977,7 @@
   booktitle =     {Reversible Computation - 10th International
                    Conference, {RC} 2018, Leicester, UK, September
                    12-14, 2018, Proceedings},
-  editor =        {Jarkko Kari and Irek Ulidowski},
+  editor =        {Jarkko Kari and Ulidowski, Irek},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
   volume =        {11106},
@@ -18712,14 +18991,14 @@
                    Robert Gl{\"{u}}ck and Robin Kaarsgaard and
                    Jarkko Kari and Martin Kutrib and Ivan Lanese and
                    Mezzina, Claudio Antares and Lukasz Mikulski and
-                   Rajagopal Nagarajan and Iain C. C. Phillips and
+                   Rajagopal Nagarajan and Phillips, Iain C.\ C. and
                    G. Michele Pinna and Luca Prigioniero and
-                   Irek Ulidowski and Germ{\'{a}}n Vidal},
+                   Ulidowski, Irek and Germ{\'{a}}n Vidal},
   booktitle =     {Reversible Computation: Extending Horizons of
                    Computing - Selected Results of the {COST} Action
                    {IC1405}},
-  editor =        {Irek Ulidowski and Ivan Lanese and Ulrik Pagh Schultz and
-                   Carla Ferreira},
+  editor =        {Ulidowski, Irek and Ivan Lanese and
+                   Ulrik Pagh Schultz and Carla Ferreira},
   pages =         {1--40},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
@@ -18731,8 +19010,8 @@
 }
 
 @book{rc2020,
-  editor =        {Irek Ulidowski and Ivan Lanese and Ulrik Pagh Schultz and
-                   Carla Ferreira},
+  editor =        {Ulidowski, Irek and Ivan Lanese and
+                   Ulrik Pagh Schultz and Carla Ferreira},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
   title =         {Reversible Computation: Extending Horizons of
@@ -18749,9 +19028,9 @@
                    Robert Gl{\"{u}}ck and Tue Haulund and James Hoey and
                    Martin Holm Cservenka and Ivan Lanese and
                    Torben {\AE}. Mogensen and Harun Siljak and
-                   Ulrik Pagh Schultz and Irek Ulidowski},
-  editor =        {Irek Ulidowski and Ivan Lanese and Ulrik Pagh Schultz and
-                   Carla Ferreira},
+                   Ulrik Pagh Schultz and Ulidowski, Irek},
+  editor =        {Ulidowski, Irek and Ivan Lanese and
+                   Ulrik Pagh Schultz and Carla Ferreira},
   pages =         {41--59},
   publisher =     {Springer},
   series =        {Lecture Notes in Computer Science},
@@ -20746,10 +21025,12 @@
 }
 
 @inproceedings{Victor94,
+  address =       {Berlin, Heidelberg},
   author =        {Victor, Bj{\"o}rn and Moller, Faron},
   booktitle =     {Computer Aided Verification},
   editor =        {Dill, David L.},
   pages =         {428--440},
+  publisher =     {Springer Berlin Heidelberg},
   series =        {LMCS},
   title =         {The mobility workbench --- A tool for the
                    $\pi$-Calculus},
@@ -20783,6 +21064,7 @@
 
 @proceedings{DBLP:conf/concur/2015,
   editor =        {Luca Aceto and David de Frutos{-}Escrig},
+  publisher =     {Schloss Dagstuhl --- Leibniz-Zentrum fuer Informatik},
   series =        {LIPIcs},
   title =         {26th International Conference on Concurrency Theory,
                    {CONCUR} 2015, Madrid, Spain, September 1.4, 2015},
@@ -20930,6 +21212,7 @@
                    (CONCUR'17)},
   editor =        {Roland Meyer and Uwe Nestmann},
   pages =         {7:1--7:17},
+  publisher =     {Schloss Dagstuhl - Leibniz-Zentrum fuer Informatik},
   series =        {LIPIcs},
   title =         {A Characterisation of Open Bisimilarity using an
                    Intuitionistic Modal Logic},
@@ -20940,6 +21223,7 @@
 
 @proceedings{DBLP:conf/concur/2017,
   editor =        {Roland Meyer and Uwe Nestmann},
+  publisher =     {Schloss Dagstuhl - Leibniz-Zentrum fuer Informatik},
   series =        {LIPIcs},
   title =         {28th International Conference on Concurrency Theory
                    (CONCUR'17)},
@@ -21092,6 +21376,7 @@
 }
 
 @inbook{Zhu2009,
+  address =       {Berlin, Heidelberg},
   author =        {Zhu, Han and Gu, Yonggen and Cai, Xiaojuan},
   booktitle =     {Computational Science -- ICCS 2009: 9th International
                    Conference Baton Rouge, LA, USA, May 25-27, 2009
@@ -21100,6 +21385,7 @@
                    Seidel, Edward and van Albada, Geert Dick and
                    Dongarra, Jack and Sloot, Peter M. A.},
   pages =         {53--62},
+  publisher =     {Springer Berlin Heidelberg},
   title =         {Knowledge Aware Bisimulation and Anonymity},
   year =          {2009},
   doi =           {10.1007/978-3-642-01970-8_6},
@@ -32536,5 +32822,19 @@
                    TIP@MPC 2002, Dagstuhl, Germany, July 8, 2002},
   volume =        {75},
   year =          {2003},
+}
+
+@proceedings{vmcai2023,
+  booktitle =     {Verification, Model Checking, and Abstract
+                   Interpretation - 24th International Conference,
+                   {VMCAI} 2023, Boston, MA, USA, January 16-17, 2023,
+                   Proceedings},
+  editor =        {Cezara Dragoi and Michael Emmi and Jingbo Wang},
+  publisher =     {Springer},
+  series =        {Lecture Notes in Computer Science},
+  volume =        {13881},
+  year =          {2023},
+  doi =           {10.1007/978-3-031-24950-1},
+  isbn =          {978-3-031-24949-5},
 }
 
